<resources>
    <string name="app_name">mBakul</string>
    <string name="selamatDatang">Selamat Datang Silahkan Mencatat</string>
    <string name="deskripsi">Silahkan memasukkan hasil penjualan anda kedalam form yang telah disediakan, data nantinya akan diproses dan menampilkan hasil keuntungannya</string>
    <string name="modal">Modal Keseluruhan (Rp)</string>
    <string name="hasilPenjualan">Hasil Penjualan Keseluruhan (item)</string>
    <string name="hargaJual">Harga Jual/Item (Rp)</string>
    <string name="hitung">Hitung</string>
    <string name="input_invalid">Form tidak boleh kosong</string>
    <string name="total_x">Keuntungan Total : Rp. %1$s</string>
    <string name="copyright">Project ini dibuat oleh Muhammad Raihan || Email : raihan.official230@gmail.com | NIM : 6706213033</string>
    <string name="histori">histori</string>
    <string name="tentang_aplikasi">About</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="belum_ada_data">belum ada data</string>
    <string name="notifikasiTersimpan">Data tersimpan di riwayat</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">mBakul=\nHasil Keuntungan: %1$s kg</string>
    <string name="profile">Profile</string>
    <string name="muhammad_raihan">Muhammad Raihan</string>
    <string name="raihan_official230_gmail_com">raihan.official230@gmail.com</string>
    <string name="daftarBarang">Daftar Barang</string>
    <string name="koneksi_error">Koneksi anda mengalami masalah</string>
</resources>